app/styles/app.css
/* ... */
.z-50 {
  z-index: 50;
}

.z-10 {
  z-index: 10;
}

.m-0 {
  margin: 0px;
}

.m-auto {
  margin: auto;
}

.m-5 {
  margin: 1.25rem;
}

.ml-auto {
  margin-left: auto;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.-mb-2 {
  margin-bottom: -0.5rem;
}

.mr-1 {
  margin-right: 0.25rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-1 {
  margin-top: 0.25rem;
}

.block {
  display: block;
}

.inline {
  display: inline;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.grid {
  display: grid;
}

.list-item {
  display: list-item;
}

.hidden {
  display: none;
}

.h-9 {
  height: 2.25rem;
}

.h-5 {
  height: 1.25rem;
}

.h-6 {
  height: 1.5rem;
}

.h-full {
  height: 100%;
}

.h-10 {
  height: 2.5rem;
}

.h-7 {
  height: 1.75rem;
}

.h-48 {
  height: 12rem;
}

.h-12 {
  height: 3rem;
}

.h-screen {
  height: 100vh;
}

.h-8 {
  height: 2rem;
}

.h-0 {
  height: 0px;
}

.h-auto {
  height: auto;
}

.h-36 {
  height: 9rem;
}

.min-h-screen {
  min-height: 100vh;
}

.w-full {
  width: 100%;
}

.w-12 {
  width: 3rem;
}

.w-5 {
  width: 1.25rem;
}

.w-6 {
  width: 1.5rem;
}

.w-10 {
  width: 2.5rem;
}

.w-7 {
  width: 1.75rem;
}

.w-3 {
  width: 0.75rem;
}

.w-8 {
  width: 2rem;
}

.w-14 {
  width: 3.5rem;
}

.w-screen {
  width: 100vw;
}

.w-52 {
  width: 13rem;
}

.max-w-screen-md {
  max-width: 768px;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.animate-spin {
  -webkit-animation: spin 1s linear infinite;
          animation: spin 1s linear infinite;
}

.cursor-default {
  cursor: default;
}

.select-none {
  -webkit-user-select: none;
     -moz-user-select: none;
          user-select: none;
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-center {
  align-items: center;
}

.justify-start {
  justify-content: flex-start;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-evenly {
  justify-content: space-evenly;
}

.gap-1 {
  gap: 0.25rem;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-0 {
  gap: 0px;
}

.gap-5 {
  gap: 1.25rem;
}

.overflow-hidden {
  overflow: hidden;
}

.overflow-scroll {
  overflow: scroll;
}

.overflow-y-auto {
  overflow-y: auto;
}

.overflow-x-hidden {
  overflow-x: hidden;
}

.overflow-y-scroll {
  overflow-y: scroll;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-l-lg {
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.rounded-b {
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.rounded-b-none {
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 0px;
}

.rounded-tl-full {
  border-top-left-radius: 9999px;
}

.rounded-tl-lg {
  border-top-left-radius: 0.5rem;
}

.border-b-2 {
  border-bottom-width: 2px;
}

.border-l-2 {
  border-left-width: 2px;
}

.border-b-0 {
  border-bottom-width: 0px;
}

.border-l-4 {
  border-left-width: 4px;
}

.border-none {
  border-style: none;
}

.border-b-base-300 {
  --tw-border-opacity: 1;
  border-bottom-color: hsl(var(--b3, var(--b2)) / var(--tw-border-opacity));
}

.border-b-primary {
  --tw-border-opacity: 1;
  border-bottom-color: hsl(var(--p) / var(--tw-border-opacity));
}

.border-l-primary {
  --tw-border-opacity: 1;
  border-left-color: hsl(var(--p) / var(--tw-border-opacity));
}

.border-b-base-200 {
  --tw-border-opacity: 1;
  border-bottom-color: hsl(var(--b2, var(--b1)) / var(--tw-border-opacity));
}

.border-b-base-100 {
  --tw-border-opacity: 1;
  border-bottom-color: hsl(var(--b1) / var(--tw-border-opacity));
}

.bg-base-200 {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--b2, var(--b1)) / var(--tw-bg-opacity));
}

.bg-inherit {
  background-color: inherit;
}

.bg-base-300\/30 {
  background-color: hsl(var(--b3, var(--b2)) / 0.3);
}

.bg-primary {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--p) / var(--tw-bg-opacity));
}

.bg-red-600 {
  --tw-bg-opacity: 1;
  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
}

.bg-base-100 {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
}

.bg-base-300\/80 {
  background-color: hsl(var(--b3, var(--b2)) / 0.8);
}

.bg-error\/80 {
  background-color: hsl(var(--er) / 0.8);
}

.bg-warning {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--wa) / var(--tw-bg-opacity));
}

.bg-info {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--in) / var(--tw-bg-opacity));
}

.bg-success {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--su) / var(--tw-bg-opacity));
}

.bg-base-300 {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--b3, var(--b2)) / var(--tw-bg-opacity));
}

.fill-blue-600 {
  fill: #2563eb;
}

.fill-current {
  fill: currentColor;
}

.p-0 {
  padding: 0px;
}

.p-2 {
  padding: 0.5rem;
}

.p-5 {
  padding: 1.25rem;
}

.p-10 {
  padding: 2.5rem;
}

.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.py-1\.5 {
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
}

.px-3 {
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.px-1 {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.pl-6 {
  padding-left: 1.5rem;
}

.pl-2 {
  padding-left: 0.5rem;
}

.pb-0 {
  padding-bottom: 0px;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.font-bold {
  font-weight: 700;
}
/* ... */

